force-app/main/default/objects/Log_Event__e/Log_Event__e.object-meta.xml
<CustomObject>
    <label>Log Event</label>
    <pluralLabel>Log Event</pluralLabel>
</CustomObject>