force-app/main/default/objects/Log_Event__e/fields/Debug_Info_Log__c.field-meta.xml
<CustomField>
    <fullName>Debug_Info_Log__c</fullName>
    <label>Debug/Info Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>