force-app/main/default/objects/Log_Event__e/fields/Error_Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Error_Stack_Trace__c</fullName>
    <label>Error Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>