force-app/main/default/objects/Log_Event__e/fields/HTTP_Response_Body__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Response_Body__c</fullName>
    <label>HTTP Response Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>