force-app/main/default/objects/Log_Event__e/fields/HTTP_Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Response_Status_Code__c</fullName>
    <label>HTTP Response Status Code</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>